--- a/03_动态绑定属性/4_v-bind动态绑定style(对象语法).html
+++ b/03_动态绑定属性/4_v-bind动态绑定style(对象语法).html
@@ -7,13 +7,17 @@
 <body>
 <div id="app">
 
-
+<h2 :style="{fontSize:finalSize+'px',backgroundColor:finalColor}">{{message}}</h2>
+<h2 style="font-size:22px">{{message}}</h2>
 </div>
 <script src="../js/vue.js"></script>
 <script>
   const app = new Vue({
     el: "#app",
     data: {
+      message: "你好，世界",
+      finalSize:100,
+      finalColor: "red"
     }
   })
 </script>
